--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "title":"Lq Blog",
     "subTitle":"Li Qiang's Blog",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "avatarUrl":"https://raw.githubusercontent.com/lq0910/lq0910.github.io/d8b0840a099e80ee1451ace5bfe6f465cfb08991/static/logo.svg",
     "GMEEK_VERSION":"last",
     "displayTitle":"LqBlog",
     "homeUrl":"https://lq0910.github.io",
