--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "title":"Lq Blog",
-    "subTitle":"Li Qiang's Blog",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "subTitle":"热爱coding，热爱生活，奋斗永不止步！",
+    "avatarUrl":"https://lq0910.github.io/logo.svg",
     "GMEEK_VERSION":"last",
     "displayTitle":"LqBlog",
     "homeUrl":"https://lq0910.github.io",
