--- a/config.json
+++ b/config.json
@@ -23,5 +23,6 @@
     "bottomText":"❤️ 转载文章请注明出处，谢谢！❤️",
     "ogImage":"https://cdn.jsdelivr.net/gh/Meekdai/meekdai.github.io/logo64.jpg",
     "primerCSS":"<link href='https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/Primer/21.0.7/primer.css' rel='stylesheet' />",
+    "allHead":"<script src='https://blog.meekdai.com/assets/GmeekBSZ.js'></script>",
     "needComment":1
 }
