--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "title":"Lq Blog",
-    "subTitle":"热爱coding，热爱生活，奋斗永不止步！",
-    "avatarUrl":"https://lq0910.github.io/logo.svg",
+    "title":"非人类程序员",
+    "subTitle":"非人类程序员是一个专注于技术开发、软件分享和日常杂谈的个人自媒体号。在这里，你将看到一个程序员的非传统视角，分享技术心得、个人项目、生活感悟和幽默趣闻。",
+    "avatarUrl":"https://lq0910.github.io/logo.png",
     "GMEEK_VERSION":"last",
     "displayTitle":"LqBlog",
     "homeUrl":"https://lq0910.github.io",
