--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "subTitle":"非人类程序员是一个专注于技术开发、软件分享和日常杂谈的个人自媒体号。在这里，你将看到一个程序员的非传统视角，分享技术心得、个人项目、生活感悟和幽默趣闻。",
     "avatarUrl":"https://lq0910.github.io/logo.png",
     "GMEEK_VERSION":"last",
-    "displayTitle":"LqBlog",
+    "displayTitle":"非人类程序员",
     "homeUrl":"https://lq0910.github.io",
     "faviconUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "email":"960661824@qq.com",
